kubernetes/apps/external-secrets/external-secrets/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-egress
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-secrets
    egress:
      - toEntities:
          - kube-apiserver
      - toEndpoints:
          - {}
